--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 </p>
 
 <p id="help">
-  Need help? <a href="http://example.com">Ask on #rust-newbies</a>.
+  Need help? <a href="http://example.com">Ask on #rust-beginners</a>.
 </p>
