Fix style on github pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="keywords" content="Rust, Rust programming language, rustlang, rust-lang, Mozilla Rust, rustup">
   <meta name="description" content="This is how you Rust">
 
+  <link rel="stylesheet" href="https://brson.github.io/rustup.org-proto/normalize.css">
+  <link rel="stylesheet" href="https://brson.github.io/rustup.org-proto/rustup.css">
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="/rustup.css">
 
@@ -44,5 +46,6 @@
   Need help? <a href="http://example.com">Ask on #rust-beginners</a>.
 </p>
 
+<script type="text/javascript" src="https://brson.github.io/rustup.org-proto/rustup.js"></script>
 <script type="text/javascript" src="/rustup.js"></script>
 
