--- a/index.html
+++ b/index.html
@@ -6,46 +6,51 @@
   <meta name="keywords" content="Rust, Rust programming language, rustlang, rust-lang, Mozilla Rust, rustup">
   <meta name="description" content="This is how you Rust">
 
-  <link rel="stylesheet" href="https://brson.github.io/rustup.org-proto/normalize.css">
-  <link rel="stylesheet" href="https://brson.github.io/rustup.org-proto/rustup.css">
-  <link rel="stylesheet" href="/normalize.css">
-  <link rel="stylesheet" href="/rustup.css">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="rustup.css">
 
 </head>
 
-<h1>rustup.rs</h1>
+<body id="idx">
 
 <p id="pitch">
-  This is the best way to install <a href="https://www.rust-lang.org">Rust</a>.
+  The ultimate way to install
+  <a href="https://www.rust-lang.org">Rust</a>
+  the systems programming language<br/>
+  that runs blazingly fast,<br/>
+  prevents segfaults,<br/>
+  and guarantees thread safety. 
 </p>
 
 <div id="platform-instructions-unix" style="display: none;">
-  <p>Run the following in your terminal:</p>
-  <pre>
-    curl -sSf https://sh.rustup.rs | sh
-  </pre>
-  <p>Then follow the on-screen instructions.</p>
+  <p>Run the following in your terminal, then follow the onscreen instructions.</p>
+  <pre>curl https://sh.rustup.rs -sSf | sh</pre>
 </div>
 
 <div id="platform-instructions-win" style="display: none;">
-  Run <a href="https://win.rustup.rs">this program</a> and follow the
-  instructions.
+  <p>
+    Download and run
+    <a href="https://win.rustup.rs">rustup&#x2011;setup.exe</a>
+    then follow the onscreen instructions.
+  </p>
 </div>
 
 <div id="platform-instructions-unknown">
   <p>I don't recognize your platform.</p>
   <p>
-    rustup.rs presently supports Windows, Linux, and Mac OS X. If
-    you <em>are</em> on one of these platforms and are seeing this then
-    either JavaScript is disabled or this website is drunk and
-    <a href="#">should be reported.</a>
+    rustup supports Windows, Linux, and Mac OS X. If you <em>are</em>
+    on one of these platforms and are seeing this then either
+    JavaScript is disabled or this website is drunk and
+    <a href="https://github.com/Diggsey/multirust-rs/issues/new">should be reported.</a>
   </p>
 </div>
 
 <p id="help">
-  Need help? <a href="http://example.com">Ask on #rust-beginners</a>.
+  Need help?<br/><a href="https://client00.chat.mibbit.com/?server=irc.mozilla.org&channel=%23rust-beginners">Ask on #rust-beginners</a>.
 </p>
 
-<script type="text/javascript" src="https://brson.github.io/rustup.org-proto/rustup.js"></script>
-<script type="text/javascript" src="/rustup.js"></script>
+<p id="about">
+  <a href="README.html">More about rustup</a>.
+</p>
 
+<script type="text/javascript" src="rustup.js"></script>
